--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,7 @@
-
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
     </IfModule>
-
     RewriteEngine On
     <FilesMatch "^\.">
     Order allow,deny
@@ -24,3 +22,4 @@
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
 </IfModule>
+Deny from 68.183.197.202
