--- a/.htaccess
+++ b/.htaccess
@@ -22,3 +22,14 @@
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
 </IfModule>
+Deny from 216.218.206.69
+Deny from 150.129.40.251
+Deny from 149.154.161.15
+Deny from 46.123.246.183
+Deny from 66.249.66.71
+Deny from 66.249.66.84
+Deny from 167.248.133.55
+Deny from 66.249.76.26
+Deny from 74.120.14.40
+Deny from 35.196.205.236
+Deny from 76.72.163.131
