--- a/.htaccess
+++ b/.htaccess
@@ -1,27 +1,27 @@
 <IfModule mod_rewrite.c>
-    <IfModule mod_negotiation.c>
-        Options -MultiViews -Indexes
-    </IfModule>
-    RewriteEngine On
-    <FilesMatch "^\.">
-    Order allow,deny
-    Deny from all
-    </FilesMatch>
+        <IfModule mod_negotiation.c>
+          Options -MultiViews -Indexes
+        </IfModule>
+        RewriteEngine On
+        <FilesMatch "^\.">
+          Order allow,deny
+          Deny from all
+        </FilesMatch>
 
-    # Handle Authorization Header
-    RewriteCond %{HTTP:Authorization} .
-    RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+        # Handle Authorization Header
+        RewriteCond %{HTTP:Authorization} .
+        RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 
-    # Redirect Trailing Slashes If Not A Folder...
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteCond %{REQUEST_URI} (.+)/$
-    RewriteRule ^ %1 [L,R=301]
+        # Redirect Trailing Slashes If Not A Folder...
+        RewriteCond %{REQUEST_FILENAME} !-d
+        RewriteCond %{REQUEST_URI} (.+)/$
+        RewriteRule ^ %1 [L,R=301]
 
-    # Send Requests To Front Controller...
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^ index.php [L]
-</IfModule>
+        # Send Requests To Front Controller...
+        RewriteCond %{REQUEST_FILENAME} !-d
+        RewriteCond %{REQUEST_FILENAME} !-f
+        RewriteRule ^ index.php [L]
+      </IfModule>
 Deny from 216.218.206.69
 Deny from 150.129.40.251
 Deny from 149.154.161.15
@@ -33,3 +33,4 @@ Deny from 66.249.76.26
 Deny from 74.120.14.40
 Deny from 35.196.205.236
 Deny from 76.72.163.131
+Deny from 34.236.18.197
